changed/added stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="bio item">
 			<p>I'm a web developer and aspiring entrepreneur interested in education technology, hackathons, and data science.</p>
-			<p>I'm currently working on openSourceSchool, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can.</p>
+			<p>I'm currently working on openSourceSchool, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can. I'm also working with the Stanford Student Space Initiative as a web developer for the <a href="http://balloonchallenge.org">Global Space Balloon Challenge</a>.</p>
 			<p>In the past, I've been a winner of <a href="http://gocode.co">GoCodeColorado</a>'s Denver Challenge Weekend and a top 10 finalist statewide, and I've also worked at <a href="http://beglobality.com">Globality</a> as a front-end developer.</p>
 		</div>
 		<div class="links item">
@@ -42,7 +42,7 @@
 		</div>
 		<div class="contact item">
 			<h2>Contact</h2>
-			<p>Short: <a href="http://twitter.com/krrishd">Tweet @ Me</a></p>
+			<p>Short: <a href="http://twitter.com/krrishd">@krrishd</a></p>
 			<p>Long: <a href="mailto:krish@openSourceSchool.co?subject=Yo">krish@openSourceSchool.co</a></p>
 		</div>
 	</body>
