--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			</div>
 		</div>
 		<div class="bio item">
-			<p>I'm a web developer and aspiring entrepreneur interested in education technology, hackathons, and data science.</p>
+			<p>I'm a web developer and aspiring entrepreneur interested in social good through technology, hackathons, and data science.</p>
 			<p>I'm currently working on openSourceSchool, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can.</p>
 			<p>I'm also working with the Stanford Student Space Initiative as a web developer for the <a href="http://balloonchallenge.org">Global Space Balloon Challenge</a>.</p>
-			<p>In the past, I've been a winner of <a href="http://gocode.co">GoCodeColorado</a>'s Denver Challenge Weekend and a top 10 finalist statewide, and I've also worked at <a href="http://beglobality.com">Globality</a> as a front-end developer.</p>
+			<p>In the past, I've been a winner of <a href="http://gocode.co">GoCodeColorado</a>'s Denver Challenge Weekend and a top 10 finalist statewide, a winner of Best Health Hack and Best Consumer Health Hack at <a href="http://pennapps.com">PennApps</a>, and I've also worked at <a href="http://beglobality.com">Globality</a> as a front-end developer.</p>
 		</div>
 		<div class="links item">
 			<ul>
@@ -34,7 +34,7 @@
 					<a href="http://behance.net/krishdholakiya">Behance</a>
 				</li>
 				<li class="resume">
-					<a href="http://registry.jsonresume.org/krish.json">Resume</a>
+					<a href="http://registry.jsonresume.org/krish">Resume</a>
 				</li>
 				<li class="linkedin">
 					<a href="http://linkedin.com/in/krishdholakiya">LinkedIn</a>
