added basic Behance integration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="initial-scale=1">
 		<meta name="description" content="Web Developer + Aspiring Entrepreneur">
 		<link href="/main.css" rel="stylesheet" type="text/css">
+		<script src="https://cdn.rawgit.com/krrishd/31f1c4140d4026c998e9/raw/8c282874a25cd850e902a4a4da772f79a87244b0/http.js"></script>
+		<script src="/app.js"></script>
 	</head>
 	<body>
 		<div class="hero">
@@ -40,6 +42,10 @@
 					<a href="http://linkedin.com/in/krishdholakiya">LinkedIn</a>
 				</li>
 			</ul>
+		</div>
+		<div class="work item">
+			<h2>Some Work</h2>
+			<ul></ul>
 		</div>
 		<div class="contact item">
 			<h2>Contact</h2>
