--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="initial-scale=1">
 		<meta name="description" content="Web Developer + Aspiring Entrepreneur">
 		<link href="/main.css" rel="stylesheet" type="text/css">
-		<script src="https://cdn.rawgit.com/krrishd/31f1c4140d4026c998e9/raw/8c282874a25cd850e902a4a4da772f79a87244b0/http.js"></script>
+		<script src="https://cdn.rawgit.com/krrishd/31f1c4140d4026c998e9/raw//1626f5cdabad3ca4f354ede1498d7ff31d7c1fe1"></script>
 		<script src="/app.js"></script>
 	</head>
 	<body>
