--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		<div class="hero">
 			<div class="main item animated fadeIn">
 				<h1>Krish Dholakiya</h1>
-				<h3>Founder @ <a href="http://openSourceSchool.co">openSourceSchool</a></h3>
+				<h3>Software Engineer + Aspiring Entrepreneur/h3>
 			</div>
 		</div>
 		<div class="bio item">
 			<p>I'm a web developer and aspiring entrepreneur interested in social good through technology, hackathons, and data science.</p>
-			<p>I'm currently working on openSourceSchool, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can.</p>
+			<p>I'm currently working on various side projects, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can.</p>
+			<p>This summer (2015), I'm also a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a startup called Forward Philly as a software engineering intern.</a>
 			<p>I'm also working with the Stanford Student Space Initiative as a web developer for the <a href="http://balloonchallenge.org">Global Space Balloon Challenge</a>.</p>
 			<p>In the past, I've been a winner of <a href="http://gocode.co">GoCodeColorado</a>'s Denver Challenge Weekend and a top 10 finalist statewide, a winner of Best Health Hack and Best Consumer Health Hack at <a href="http://pennapps.com">PennApps</a>, and I've also worked at <a href="http://beglobality.com">Globality</a> as a front-end developer.</p>
 		</div>
