--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="hero">
 			<div class="main item animated fadeIn">
 				<h1>Krish Dholakiya</h1>
-				<h3>Software Engineer + Aspiring Entrepreneur/h3>
+				<h3>Software Engineer + Aspiring Entrepreneur</h3>
 			</div>
 		</div>
 		<div class="bio item">
