add loading indicator for work, also add basic stateful structure

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 		</div>
 		<div class="work item">
 			<h2>Some Work</h2>
+			<div class="loading true">
+				<img src="/img/loading.gif">
+			</div>
 			<ul></ul>
 		</div>
 		<div class="contact item">
