the world aint ready for us sway

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="workContainer">
+		<div class="workContainerr">
 			<div class="work item">
 				<h2>Some Work</h2>
 				<div class="loading true">
@@ -56,10 +56,10 @@
 				</div>
 				<ul></ul>
 			</div>
-			<div class="metadataContainer item">
+			<!---<div class="metadataContainer item">
 				<div class="metadata show">
 				</div>
-			</div>
+			</div>-->
 		</div>
 		<div class="contact item">
 			<h2>Contact</h2>
