maybe this polyfill will actually work

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Web Developer + Aspiring Entrepreneur">
 		<link href="/main.css" rel="stylesheet" type="text/css">
 		<script src="https://cdn.rawgit.com/krrishd/31f1c4140d4026c998e9/raw/1f9a7562709f3c5bd47bec756cde2e75982dfea5/http.js"></script>
-		<script src="https://rawgit.com/MaxArt2501/object-observe/master/dist/object-observe.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/polyfills/polyfill.js"></script>
 		<script src="/app.js"></script>
 	</head>
 	<body>
