--- a/index.html
+++ b/index.html
@@ -20,11 +20,24 @@
 			</div>
 		</div>
 		<div class="bio item">
-			<p>I'm a web developer and aspiring entrepreneur interested in social good through technology, hackathons, and data science.</p>
-			<p>I'm currently working on various side projects, organizing <a href="http://codeday.org">CodeDay</a> in Colorado, and trying to attend as many <a href="http://mlh.io">Major League Hackathons</a> as I can.</p>
-			<p>This summer (2015), I'm also a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a startup called Forward Philly as a software engineering intern.</a>
-			<p>I'm also working with the Stanford Student Space Initiative as a web developer for the <a href="http://balloonchallenge.org">Global Space Balloon Challenge</a>.</p>
-			<p>In the past, I've been a winner of <a href="http://gocode.co">GoCodeColorado</a>'s Denver Challenge Weekend and a top 10 finalist statewide, a winner of Best Health Hack and Best Consumer Health Hack at <a href="http://pennapps.com">PennApps</a>, and I've also worked at <a href="http://beglobality.com">Globality</a> as a front-end developer.</p>
+			<p>I'm a web developer interested in social entrepreneurship, hackathons, and music.</p>
+			<p>
+				<span>TL;DR for my resume:</span>
+				<ul>
+					<li>I've won @ several hackathons (Best Health Hack @ <a href="http://pennapps.com">PennApps W15</a>, Winner @ <a href="http://gocode.co">GoCodeColorado</a> Denver 2014)</li>
+					<li>I've organized <a href="http://codeday.org">CodeDay</a> several times in Denver + Boulder.</li>
+					<li>I spent the summer of 2015 as a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a real estate startup called Forward Philly as a software developer.</li>
+					<li>My mixtape is out there somewhere. Your mission, should you choose to accept it, is to find it.</li>
+				</ul>
+			</p>
+			<p>Feel free to <a href="https://twitter.com/krrishd" style="color: #55acee;">DM me on Twitter</a> or <a class="facebookMessage" href="https://www.facebook.com/krish.dholakiya">FB message</a> me if you want to talk about anything:
+				<ul>
+					<li>freelance work you need done,</li>
+					<li>an internship spot you have open,</li>
+					<li>sick wubs I should be checking out (hip hop, indie/electronic/idekffs),</li>
+					<li>or even that dank meme you've been trying to make relevant ( ͡° ͜ʖ ͡°)</li>
+				</ul>
+			</p>
 		</div>
 		<div class="links item">
 			<ul>
@@ -61,10 +74,10 @@
 				</div>
 			</div>-->
 		</div>
-		<div class="contact item">
+		<!--<div class="contact item">
 			<h2>Contact</h2>
 			<p>Short: <a href="http://twitter.com/krrishd">@krrishd</a></p>
 			<p>Long: <a href="mailto:krish@openSourceSchool.co?subject=Yo">krish@openSourceSchool.co</a></p>
-		</div>
+		</div>-->
 	</body>
 </html>
