--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li>I've won @ several hackathons (Best Health Hack @ <a href="http://pennapps.com">PennApps W15</a>, Winner @ <a href="http://gocode.co">GoCodeColorado</a> Denver 2014)</li>
 					<li>I've organized <a href="http://codeday.org">CodeDay</a> several times in Denver + Boulder.</li>
 					<li>I spent the summer of 2015 as a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a real estate startup called Forward Philly as a software developer.</li>
-					<li>My mixtape is out there somewhere. Your mission, should you choose to accept it, is to find it.</li>
+					<li>My mixtape is out there <a href="/wub">somewhere</a>. Your mission, should you choose to accept it, is to find it.</li>
 				</ul>
 			</p>
 			<p>Feel free to <a href="https://twitter.com/krrishd" style="color: #55acee;">DM me on Twitter</a> or <a class="facebookMessage" href="https://www.facebook.com/krish.dholakiya">FB message</a> me if you want to talk about anything:
