--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<a href="http://behance.net/krishdholakiya">Behance</a>
 				</li>
 				<li class="resume">
-					<a href="http://registry.jsonresume.org/krish?theme=onepage">Resume</a>
+					<a href="http://registry.jsonresume.org/krish">Resume</a>
 				</li>
 				<li class="linkedin">
 					<a href="http://linkedin.com/in/krishdholakiya">LinkedIn</a>
