--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<img src="/img/me.jpeg">
 				<div class="text">
 					<h1>Krish Dholakiya</h1>
-					<h3>Software Engineer + Aspiring Entrepreneur</h3>
+					<h3>[Designer, Software Engineer, ...]</h3>
 				</div>
 			</div>
 		</div>
@@ -24,18 +24,23 @@
 			<p>
 				<span>TL;DR for my resume:</span>
 				<ul>
-					<li>I've won @ several hackathons (Best Health Hack @ <a href="http://pennapps.com">PennApps W15</a>, Winner @ <a href="http://gocode.co">GoCodeColorado</a> Denver 2014)</li>
+					<li>
+						<p>I spent the summer of 2015 as a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a real estate startup called Forward Philly as a software developer.</p>
+						<p>Wrote lots and lots of React.js and Node.js both in web development and data migration/analysis/processing contexts.</p></li>
+					<li>I've won @ several hackathons:<ul>
+					 <li>Best Health Hack + Best Consumer Health Hack@ <a href="http://pennapps.com">PennApps W15</a></li>
+					 <li>Winner @ <a href="http://gocode.co">GoCodeColorado</a> Denver 2014)</li></ul></li>
 					<li>I've organized <a href="http://codeday.org">CodeDay</a> several times in Denver + Boulder.</li>
-					<li>I spent the summer of 2015 as a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a real estate startup called Forward Philly as a software developer.</li>
 					<li>My mixtape is out there <a href="/wub">somewhere</a>. Your mission, should you choose to accept it, is to find it.</li>
 				</ul>
 			</p>
-			<p>Feel free to <a href="https://twitter.com/krrishd" style="color: #55acee;">DM me on Twitter</a> or <a class="facebookMessage" href="https://www.facebook.com/krish.dholakiya">FB message</a> me if you want to talk about anything:
+			<p>Feel free to <a href="https://twitter.com/krrishd" style="color: #55acee;">DM me on Twitter</a> or email me at <a href="mailto:krish[at]slice[dot]capital">krish[at]slice[dot]capital</a> if you want to talk about anything:
 				<ul>
-					<li>freelance work you need done,</li>
-					<li>an internship spot you have open,</li>
-					<li>sick wubs I should be checking out (hip hop, indie/electronic/idekffs),</li>
-					<li>or even that dank meme you've been trying to make relevant ( ͡° ͜ʖ ͡°)</li>
+					<li>freelance work you need done (product design, web development, etc)</li>
+					<li>internship/job opportunities</li>
+					<li>volunteering opportunities (I like tech, politics, and education if I can be choosy)</li>
+					<li>music</li>
+					<li>honestly anything that isn't spam/ads/etc</li>
 				</ul>
 			</p>
 		</div>
@@ -43,6 +48,9 @@
 			<ul>
 				<li class="twitter">
 					<a href="http://twitter.com/krrishd">Twitter</a>
+				</li>
+				<li class="resume">
+					<a href="http://registry.jsonresume.org/krish">Resume</a>
 				</li>
 				<li class="medium">
 					<a href="http://medium.com/@krrishd">Blog</a>
@@ -52,9 +60,6 @@
 				</li>
 				<li class="behance">
 					<a href="http://behance.net/krishdholakiya">Behance</a>
-				</li>
-				<li class="resume">
-					<a href="http://registry.jsonresume.org/krish">Resume</a>
 				</li>
 				<li class="linkedin">
 					<a href="http://linkedin.com/in/krishdholakiya">LinkedIn</a>
