--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<span>TL;DR for my resume:</span>
 				<ul class="resumeItems">
 					<li>I spent the summer of 2015 as a <a href="http://pennappsfellows.com">PennApps Fellow</a>, working out of Philadelphia with a real estate startup called Forward Philly as a software developer.<ul>
-						<li>Wrote lots and lots of React.js and Node.js both in web development and data migration/analysis/processing contexts.</li></ul></li>
+						<li>Wrote lots and lots of React.js and Node.js both in web development and data migration, sanitization, and analysis contexts.</li></ul></li>
 					<li>I've won @ several hackathons:<ul>
 					 <li>Best Health Hack + Best Consumer Health Hack @ <a href="http://pennapps.com">PennApps W15</a></li>
 					 <li>Winner @ <a href="http://gocode.co">GoCodeColorado</a> Denver 2014</li></ul></li>
