--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Krish Dholakiya</title>
-		<meta name="viewport" content="initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Web Developer + Aspiring Entrepreneur">
 		<link href="/main.css" rel="stylesheet" type="text/css">
 		<script src="https://cdn.rawgit.com/krrishd/31f1c4140d4026c998e9/raw/1f9a7562709f3c5bd47bec756cde2e75982dfea5/http.js"></script>
