--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 		<div id="content"></div>
-		<div class="titleSection animated fadeInUp">
+		<div class="titleSection">
 			<div class="inlineItems">
 				<h1>krish dholakiya</h1>
 				<p>designer+developer
