--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="description" content="">
-		<title>Krish Dholakiya - Designer + Developer</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-    	<script src="/app.jsx" type="text/babel"></script>
-    	<link href="/main.css" type="text/css" rel="stylesheet">
-	</head>
-	<body>
-		<div class="container">
-		<div id="content"></div>
-		<div class="titleSection">
-			<div class="inlineItems">
-				<h1>krish dholakiya</h1>
-				<p>designer+developer
-			</div>
-			<div class="inlineItems links">
-				<a href="/resume.pdf">resumé</a>
-				<a href="//twitter.com/krrishd">twitter</a>
-			</div>
-		</div>
-		</div>
-	</body>
-</html>
+<!DOCTYPE html><html><head><title>krish dholakiya</title><link href="/main.css" type="text/css" rel="stylesheet"><script src="/app.js"></script></head><body><div class="container"><h1 class="name">krish dholakiya</h1><div class="about"><p>I'm a software engineer who dabbles in everything from design to music. I'm a cofounder of <a href="//slice.capital" class="slice">slice.capital</a>, and also work part-time as a freelance software developer. I take interest in music (production and as a listener), politics, and other things you might see pop-up from time to time on my <a href="//twitter.com/krrishd" class="twitter">twitter</a>.</p></div><div class="contact"><p>Let's talk: you can email me at <a href="mailto:krish@slice.capital" class="slice">krish@slice.capital</a> or <a href="https://twitter.com/messages/compose?recipient_id=114597133" class="twitter">DM me on Twitter</a>. Here's my <a href="/resume.pdf" class="resume">resumé</a> if that's what you're looking for.</p></div></div><footer><p>Made w love in Boulder. Work in progress :)</p></footer></body></html>
